...
        />
      </Column>
      <ProfileAction
        icon="inbox"
        onPress={onPressReceive}
        scaleTo={0.88}
        testID="ReceiveButton"
        text="Receive"
      />
    </RowWithMargins>
    {showBottomDivider && (
      <Divider style={{ bottom: 0, position: 'absolute' }} />
    )}
...
  withHandlers({
    onPressCopy: ({ accountAddress, emojiCount, setEmojiCount }) => () => {
      setEmojiCount(emojiCount + 1);
      Clipboard.setString(accountAddress);
    },
    onPressReceive: ({ navigation }) => () =>
      navigation.navigate('ReceiveModal'),
  }),
  onlyUpdateForKeys(['accountAddress', 'emojiCount', 'showBottomDivider'])
)(ProfileMasthead);

