const Routes = {
  ADD_CASH_SCREEN_NAVIGATOR: 'AddCashSheetNavigator',
  ADD_CASH_SHEET: 'AddCashSheet',
  AVATAR_BUILDER: 'AvatarBuilder',
  CONFIRM_REQUEST: 'ConfirmRequest',
  EXAMPLE_SCREEN: 'ExampleScreen',
  EXCHANGE_MODAL: 'ExchangeModal',
  EXPANDED_ASSET_SHEET: 'ExpandedAssetSheet',
  IMPORT_SEED_PHRASE_SHEET: 'ImportSeedPhraseSheet',
  MAIN_NATIVE_BOTTOM_SHEET_NAVIGATOR: 'MainNativeBottomSheetNavigation',
  MAIN_NAVIGATOR: 'MainNavigator',
  MODAL_SCREEN: 'ModalScreen',
  NATIVE_STACK: 'NativeStack',
  PROFILE_SCREEN: 'ProfileScreen',
  QR_SCANNER_SCREEN: 'QRScannerScreen',
  RECEIVE_MODAL: 'ReceiveModal',
  SAVINGS_DEPOSIT_MODAL: 'SavingsDepositModal',
  SAVINGS_SHEET: 'SavingsSheet',
  SAVINGS_WITHDRAW_MODAL: 'SavingsWithdrawModal',
  SEND_SHEET: 'SendSheet',
  SEND_SHEET_NAVIGATOR: 'SendSheetNavigator',
  SETTINGS_MODAL: 'SettingsModal',
  STACK: 'Stack',
  SUPPORTED_COUNTRIES_MODAL_SCREEN: 'SupportedCountriesModalScreen',
  SWIPE_LAYOUT: 'SwipeLayout',
  WALLET_CONNECT_CONFIRMATION_MODAL: 'WalletConnectConfirmationModal',
  WALLET_SCREEN: 'WalletScreen',
};

export default Routes;
